Added some changes

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,6 +3,7 @@
 @import "~bootstrap/scss/variables";
 
 // $primary: purple;
+$font-family-base: 'Raleway', sans-serif;
 $breadcrumb-divider: quote(">");
 
 @import "~bootstrap/scss/mixins";
