Added alot of changes

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -28,6 +28,7 @@ $breadcrumb-divider: quote(">");
 @import "~bootstrap/scss/list-group";
 @import "~bootstrap/scss/tooltip";
 @import "~bootstrap/scss/forms";
+@import "~bootstrap/scss/spinners";
 
 // Helpers
 @import "~bootstrap/scss/helpers";
